conexion con front